test-rv.log
Testing test/test_src/ack.mbt
2045

Testing test/test_src/adder.mbt
10

Testing test/test_src/adder2.mbt
35

Testing test/test_src/bf.mbt
RuntimeError: unreachable
    at $moonbitlang/minimbt/lower/riscv.abort|Unit|.fn/2133 (wasm://wasm/003ccf9a:wasm-function[2350]:0x59fb6)
    at @moonbitlang/minimbt/lower/riscv.IteratedBlockInfo::compute_live_set.fn/2142 (wasm://wasm/003ccf9a:wasm-function[2367]:0x5b9af)
    at @moonbitlang/minimbt/lower/riscv.Liveness::compute_block_liveness.fn/2329 (wasm://wasm/003ccf9a:wasm-function[2382]:0x5bf08)
    at @moonbitlang/core/hashmap.T::iter|String+@moonbitlang/minimbt/lower/riscv.IteratedBlockInfo|.fn/2434 (wasm://wasm/003ccf9a:wasm-function[1696]:0x24ef5)
    at @moonbitlang/minimbt/lower/riscv.Liveness::compute_block_liveness.fn/2146 (wasm://wasm/003ccf9a:wasm-function[2379]:0x5bdcb)
    at @moonbitlang/minimbt/lower/riscv.RiscvFnLoweringCtx::lower.fn/2234 (wasm://wasm/003ccf9a:wasm-function[2486]:0x5edad)
    at @moonbitlang/minimbt/lower/riscv.RiscvLoweringCtx::lower.fn/2299 (wasm://wasm/003ccf9a:wasm-function[2517]:0x6242c)
    at @moonbitlang/core/hashmap.T::iter|@moonbitlang/minimbt/core.FnRef+@moonbitlang/minimbt/core.Fn|.fn/2430 (wasm://wasm/003ccf9a:wasm-function[1704]:0x251ee)
    at @moonbitlang/minimbt/lower/riscv.RiscvLoweringCtx::lower.fn/2252 (wasm://wasm/003ccf9a:wasm-function[2516]:0x622ff)
    at @moonbitlang/minimbt/bin.CompileStatus::step.fn/2262 (wasm://wasm/003ccf9a:wasm-function[2548]:0x63929)
error: failed to run
error(compilation): clang failed with stderr: test/test_src/bf.mbt.S:1:1: error: unknown directive
.aux_b8 live set mismatch: @hashset.of([v5, v10, zero, v0, v6, s11, v2]) and @hashset.of([v5, v10, zero, v0, v6, v2])
^

test/test_src/bf.mbt.S:1:1: error: clang exited with code 1
Exception: Could not open file: out


Testing test/test_src/cls-bug.mbt
912

Testing test/test_src/cls-bug2.mbt
9876543210

Testing test/test_src/cls-rec.mbt
120

Testing test/test_src/cls-reg-bug.mbt
15

Testing test/test_src/debug.mbt


Testing test/test_src/even-odd.mbt
456

Testing test/test_src/fib.mbt
832040

Testing test/test_src/float.mbt
-44604263

Testing test/test_src/funcomp.mbt
247

Testing test/test_src/gcd.mbt
2700

Testing test/test_src/id.mbt
1001

Testing test/test_src/inprod-loop.mbt
16826400

Testing test/test_src/inprod-rec.mbt
16826400

Testing test/test_src/inprod.mbt
32000000

Testing test/test_src/join-reg.mbt
912

Testing test/test_src/join-reg2.mbt
789

Testing test/test_src/join-stack.mbt
1037

Testing test/test_src/join-stack2.mbt
246

Testing test/test_src/join-stack3.mbt
912

Testing test/test_src/landins_knot.mbt
3548768835487672

Testing test/test_src/matmul-flat.mbt
58
64
139
154

Testing test/test_src/matmul.mbt
58
64
139
154

Testing test/test_src/non-tail-if.mbt
-10

Testing test/test_src/non-tail-if2.mbt
80238

Testing test/test_src/print.mbt
123-456789

Testing test/test_src/shuffle.mbt
214563

Testing test/test_src/spill.mbt
-431

Testing test/test_src/spill2.mbt
77880

Testing test/test_src/spill3.mbt
1617

Testing test/test_src/sum-tail.mbt
50005000

Testing test/test_src/sum.mbt
50005000

